# air-lead-enrichment

./: Dockerfile  Makefile  README.md  TechSpec.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
EDA/: EDA_SUMMARY.md  clean_for_salesforce.csv  eda.ipynb  eda_working_frame.csv
app/: config.py  enrichment.py  main.py  models.py  normalizer.py  rules.json  scoring.py
tests/: test_api.py  test_csv_and_config.py  test_enrichment.py  test_normalizer.py  test_scoring.py
